--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import "@material/react-button/index";
+@import "./react-button-overrides";
+
 .App {
   text-align: center;
 }
@@ -21,8 +24,12 @@
 .App-intro {
   font-size: large;
 }
-
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
