use bootstrap scss

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
-@import "@material/react-button/index";
+@import './styles/index';
+@import '@material/react-card/index.scss';
 @import "./react-button-overrides";
 
 .App {
