material icon sample

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 @import './styles/index';
 @import '@material/react-card/index.scss';
+@import '@material/react-button/index.scss';
+@import '@material/react-material-icon/index.scss';
 @import "./react-button-overrides";
 
 .App {
